<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="user">账户</string>
    <string name="app_name">view</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_main_Name">主页</string>
    <string name="menu_main_Lawyer">律师</string>
    <string name="menu_main_Msg">消息</string>
    <string name="menu_main_check">智能查询</string>
    <string name="menu_main_check_txt">法条案例一应俱全</string>
    <string name="menu_main_law">法条查询</string>
    <string name="menu_main_lawyer">律师服务</string>
    <string name="menu_main_news">新闻资讯</string>
    <string name="menu_main_lawyer_publish_serve">我要提问</string>
    <string name="menu_main_lawyer_publish_txt">简要描述你的问题</string>
    <string name="menu_main_lawyer_publish_submit">确认提交</string>
    <string name="menu_main_lawyer_publish_wait">您的问题已提交，请耐心等待……</string>
    <string name="menu_main_lawyer_publish_wait_check">查看我的律师反馈</string>
    <string name="pwd">密码</string>
    <string name="itm">我已阅读并同意《用户协议》</string>
    <string name="menu_check">查询</string>
    <string name="menu_main">主页</string>
    <string name="menu_my">我的</string>
    <string name="check_gongneng">查询功能</string>
    <string name="menu_check_smart">智能查询</string>
    <string name="menu_book_smart">文书查询</string>
    <string name="menu_law_smart">法条查询</string>
    <string name="menu_main_my_publish_question">我要提问</string>
    <string name="menu_main_my_collection">我的收藏</string>
    <string name="menu_main_my_history_question">我的历史</string>
    <string name="menu_my_bendi">从本地图库选择照片</string>
    <string name="menu_my_take">拍照</string>
    <string name="menu_main_loading">正在加载中……</string>
    <string name="common_view_release">释放</string>
    <string name="common_swipe_to_load_more">点击加载更多.....</string>
    <string name="common_view_loading_ok">加载完成</string>
    <string name="common_load_more">加载更多。。。</string>
    <string name="common_load_complete">加载已完成</string>
    <string name="common_view_loading">加载中</string>
    <string name="user_name">未知名</string>
    <string name="my_set">设置</string>
    <string name="menu_my_set_about">关于我们</string>
    <string name="menu_my_set_option">操作指南</string>
    <string name="menu_my_set_remove">清除缓存</string>
    <string name="menu_my_set_logoff">退出登录</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_history">我的历史</string>
    <string name="wenshu_collection">文书收藏</string>
    <string name="new_fresh">最近更新：</string>
    <string name="fatiao_collection">法条收藏</string>
    <string name="publish_title">输入标题</string>
    <string name="jiejue">待处理</string>
    <string name="tip">文书</string>
    <string name="wenshu">请输入文字内容、关键字等</string>
    <string name="wenshu_fayuan">法院名称</string>
    <string name="wenshu_title">文书查询</string>
    <string name="wenshu_date">裁判日期格式:如2017-03-01</string>
    <string name="wenshu_fayuan_leixing">法院类型</string>
</resources>
