<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/Blue">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_set"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:layout_centerInParent="true"/>
        <ImageButton
            android:id="@+id/menu_my_back"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:background="@drawable/back"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite">
            <TextView
                android:id="@+id/menu_my_set_about"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/menu_my_set_about"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:gravity="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGrey"/>
            <TextView
                android:id="@+id/menu_my_set_option"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/menu_my_set_option"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:gravity="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGrey"/>

            <TextView
                android:id="@+id/menu_check_book_txt1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/menu_my_set_remove"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGrey"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="100dp"
            android:background="@color/Red"
            android:text="@string/menu_my_set_logoff"
            android:textColor="@color/colorWhite"
            android:textSize="23sp"/>
    </LinearLayout>
</LinearLayout>