<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/Blue"
                android:text="@string/menu_main_lawyer_publish_serve"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"
                android:gravity="center"/>
    <LinearLayout
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/biankuang">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="top"
            android:layout_gravity="center"
            android:hint="@string/publish_title"/>
    </LinearLayout>
        <LinearLayout
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/biankuang">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/menu_main_lawyer_publish_txt"/>
            </LinearLayout>
                <Button
                    android:id="@+id/publish_question_publish"
                    android:layout_width="180dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="160dp"
                    android:background="@color/Blue"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:text="@string/menu_main_lawyer_publish_submit"/>
</LinearLayout>