<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:fys="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/main_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/menu">
    </FrameLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <com.project.android.marrigelaws.ChangeColorIconWithText
            android:id="@+id/menu_main"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            fys:icon="@drawable/frg_1"
            fys:text="@string/menu_main"
            fys:text_size="12sp"
            fys:color="#B3EE3A" />
        <!-- 设置tapbar滑动时填充颜色 fys:color="#B3EE3A" -->

        <com.project.android.marrigelaws.ChangeColorIconWithText
            android:id="@+id/menu_check"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            fys:icon="@drawable/frg_2"
            fys:text="@string/menu_check"
            fys:text_size="12sp"
            fys:color="#B3EE3A" />

        <com.project.android.marrigelaws.ChangeColorIconWithText
            android:id="@+id/menu_my"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            fys:icon="@drawable/frg_3"
            fys:text="@string/menu_my"
            fys:text_size="12sp"
            fys:color="#B3EE3A" />
    </LinearLayout>

</RelativeLayout>