<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@drawable/bgtop">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <com.project.android.marrigelaws.CircleImageView
            android:id="@+id/circle_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/a"/>
        <ImageButton
            android:id="@+id/menu_my_set"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/set"
            />
            <EditText
                android:id="@+id/menu_my_name_set_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/circle_picture"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:text="@string/user_name"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"
                android:enabled="false"
                android:background="@null"
                style="@android:style/Widget.TextView"/>
            <ImageButton
                android:id="@+id/menu_my_write"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="@drawable/write"
                android:layout_below="@+id/circle_picture"
                android:layout_toEndOf="@+id/menu_my_name_set_edit"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/menu_main_my_publish_question"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:src="@drawable/jiantou"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGrey"/>

        <RelativeLayout
            android:id="@id/menu_my_history"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/menu_main_my_history_question"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:src="@drawable/jiantou"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGrey"/>

        <RelativeLayout
            android:id="@id/menu_my_collection"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/menu_main_my_collection"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:src="@drawable/jiantou"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGrey"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGrey"/>
    </LinearLayout>
</LinearLayout>