<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/Blue">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_gongneng"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="center"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <ImageView
                android:id="@+id/menu_check_smart_img"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:scaleType="fitXY"
                android:src="@drawable/smart"/>
            <TextView
                android:id="@+id/menu_check_smart_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_check_smart"
                android:layout_toRightOf="@id/menu_check_smart_img"
                android:layout_centerVertical="true"
                android:textSize="25sp"
                android:layout_marginLeft="20dp"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:scaleType="fitXY"
                android:src="@drawable/jiantou"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
             android:background="@color/colorGrey"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <ImageView
                android:id="@+id/menu_check_law_img"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:scaleType="fitXY"
                android:src="@drawable/lawitem"/>
            <TextView
                android:id="@+id/menu_check_law_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_law_smart"
                android:layout_toRightOf="@id/menu_check_law_img"
                android:layout_centerVertical="true"
                android:textSize="25sp"
                android:layout_marginLeft="20dp"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:scaleType="fitXY"
                android:src="@drawable/jiantou"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGrey"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <ImageView
                android:id="@+id/menu_check_book_img"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:scaleType="fitXY"
                android:src="@drawable/book"/>
            <TextView
                android:id="@+id/menu_check_book_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_book_smart"
                android:layout_toRightOf="@id/menu_check_book_img"
                android:layout_centerVertical="true"
                android:textSize="25sp"
                android:layout_marginLeft="20dp"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:scaleType="fitXY"
                android:src="@drawable/jiantou"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGrey"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrey">

    </LinearLayout>
</LinearLayout>