<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1"
              android:orientation="vertical"
              android:background="@drawable/setbg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:src="@drawable/a"
            android:scaleType="fitXY"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70px"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="4px"
                android:layout_height="50px"
                android:background="@color/colorWhite"
                android:layout_gravity="center_vertical"
                />
            <EditText
                android:id="@+id/user_sign"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:background="@null"
                android:textColor="@color/colorWhite"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/colorWhite"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70px"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwd"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="4px"
                android:layout_height="50px"
                android:background="@color/colorWhite"
                android:layout_gravity="center_vertical"
                />
            <EditText
                android:id="@+id/pwd_sign"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:background="@null"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/colorWhite"/>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:orientation="horizontal"
          android:layout_marginBottom="20dp"
          android:layout_marginTop="10dp">
        <CheckBox
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
            android:layout_gravity="center"/>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center">
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="17sp"
                  android:textColor="@color/colorWhite"
                  android:text="@string/itm"/>
              <View
                  android:layout_width="230dp"
                  android:layout_height="1dp"
                  android:background="@color/colorWhite"/>
          </LinearLayout>
          </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#00000000"
            android:text="注&#160;&#160;&#160;&#160;册"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:layout_marginTop="60dp"/>
        <!--android:textStyle="bold"-->
    </LinearLayout>

</LinearLayout>
